<resources>
    <string name="app_name">AppCasas</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="numero_escritura">Numero de Escritura</string>
    <string name="departamento">Departamento</string>
    <string name="ciudad">Ciudad</string>
    <string name="barrio">Barrio</string>
    <string name="direccion">Dirección</string>
    <string name="agregar_casa">AGREGAR CASA</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="mensaje_guardar">Casa Guardada Exitosamente</string>
    <string name="titulo_detalle">DETALLE CASA</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="eliminar_casa">Eliminar Casa</string>
    <string name="advertencia_eliminar_casa">¿Esta Seguro de Eliminar a esta Casa?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="error_escritura">Por favor digite el Numero de la Escitura</string>
    <string name="error_departamento">Por favor digite el Departamento</string>
    <string name="error_ciudad">Por favor digite la Ciudad</string>
    <string name="error_barrio">Por favor digite el Barrio</string>
    <string name="error_direccion">Por favor digite la Direccion</string>
</resources>
